# gloop

./: README.md  example.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
gloop/: loop.py  policies.py  runners.py
tests/: conftest.py  test_loop.py  test_policies.py
